<resources>
    <string name="app_name">Кинокаталог</string>
    <string name="login">Вход в аккаунт</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="button_login">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="already_an_user_login">Уже зарегистрированы? Вход в аккаунт</string>
    <string name="not_yet_registered_sing_up">Создать новый аккаунт</string>
    <string name="email">Электронная почта</string>
    <string name="re_password">Повторите пароль</string>
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="favorite">Избранное</string>
    <string name="catalog">Список фильмов</string>
    <string name="profile_birth_date">Дата рождения</string>
    <string name="description">Описание</string>
    <string name="delete_user_button">Удалить аккаунт</string>
    <string name="search_view_hint">Поиск</string>
    <string name="city">Город</string>
    <string name="country">Страна</string>
    <string name="gender">Пол</string>
    <string name="education">Образование</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="review">Отзыв</string>
    <string name="pictures">Изображения</string>
    <string name="name">Название</string>
    <string name="rating_and_reviews">Оценки и отзывы</string>
    <string name="your_review">Ваш отзыв</string>
    <string name="rate_movie">Оцените фильм</string>
    <string-array name="gender_values">
        <item>Не указан</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>